syntax = "proto3";

option go_package = "github.com/ishan-backend/low-level-design/machine-coding/bidirec-grpc/proto;servicepb";

// Use below command to generate or use Makefile's make proto
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./service.proto

message BidirectionalMessageRequest {
  string uuid = 1;
  string value = 2;
}

message BidirectionalMessageResponse {
  string uuid = 1;
  string value = 2;
}

message ClientMessageRequest {
  string uuid = 1;
  string value = 2;
}

message ClientMessageResponse {
  bool success = 1;
}

message ServerSideRequest {
  string uuid = 1;
}

message ServerSideResponse {
  string value = 1;
}

service StreamingGrpc {
  rpc BidirectionalStream(stream BidirectionalMessageRequest) returns (stream BidirectionalMessageResponse); // we need to implement this for server, and to use it at the client as well
  rpc ClientSideStream(stream ClientMessageRequest) returns (ClientMessageResponse);
  rpc ServerSideStream(ServerSideRequest) returns (stream ServerSideResponse);
}